# CPMLibrary

./: .gitignore  CMakeLists.txt  CPM_library.code-workspace  conversationhistory.cpp  conversationhistory.hpp  filetransferhistory.cpp  groupstate.cpp  manualtest  manualtest.cpp  processmessage.cpp  test.cpp
Objects/: conversationhistory.h  cpmobject.h  groupstate.h  media.h  message.h  sessionhistory.h
manualtest.dSYM/Contents/: Info.plist
manualtest.dSYM/Contents/Resources/DWARF/: manualtest
src/Extensions/: cpmheaders.cpp  cpmheaders.h  cpmmanager.cpp  cpmmanager.h  cpmobject.cpp  cpmobject.h  cpmobjecttypeinit.cpp  errors.cpp  errors.h  storagecpmobject.cpp  storagecpmobject.h  xcpm.cpp  xcpm.h
src/Extensions/include/: cpmheaders.h  cpmmanager.h  cpmobject.h  errors.h  storagecpmobject.h  xcpm.h
src/Objects/: conversationhistory.cpp  conversationhistory.h  filetransferhistory.cpp  filetransferhistory.h  groupstate.cpp  groupstate.h  media.cpp  media.h  message.cpp  message.h  processmessage.cpp  sessionhistory.cpp  sessioninfo.cpp  sessioninfo.h
src/Objects/include/: conversationhistory.h  cpmobject.h  filetransferhistory.h  groupstate.h  media.h  message.h  processmessage.h  sessionhistory.h  sessioninfo.h
src/Storage/include/: read.h  write.h
test.dSYM/Contents/Resources/DWARF/: test
tester/: cpm_message_storage_test.h  cpm_simul.cpp  cpm_test.h  manualtest.cpp
tests/: cpmmanagertestsuite.h  globalrandomreadwritetest.h  messagetestsuite.h
